--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,592 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+*{
+  margin:0;
+  padding:0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+.top{
+  width:100%;
+  margin-top:1px;
+  height: 50px;
+  position: sticky;
+  top:0;
+  background-color: aliceblue;
+  display: flex;
+  align-items: center;
+  z-index: 999;
+}
+.topCenter{
+  flex:6;
+}
+.topLeft,.topRight{
+  flex:3;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+}
+.topIcons{
+    font-size: 20px;
+    margin-top: 10px;
+    padding:0.65em;
+    color:#444;
+    cursor:pointer;
+}
+.topImg{
+  width:40px;
+  height:40px;
+  border-radius: 50%;
+  object-fit: cover;
+  cursor: pointer;
+}
+
+.topList{
+  display:flex;
+  justify-content: center;
+  list-style: none;
+}
+.topItem{
+  margin-right: 20px;
+  font-size: 18px;
+  font-weight: 300;
+  padding:0.75em;
+  cursor: pointer;
+}
+.header{
+  margin-top: 60px;
+}
+.headerTitles{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  color:#444;
+  
+}
+.headerTitleSm{
+  position:absolute;
+  top:18%;
+  font-size:100px;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+.headerTitleLg{
+  position:absolute;
+  top:40%;
+  font-size:40px;
+  font-family:monospace;
+}
+.headerImg{
+  width:100%;
+  height: 500px;
+  margin-top: 1px;
+  object-fit: cover;
+}
+.link{
+  text-decoration: none;
+  color:inherit;
+}
+.Events{
+  display: flex;
+  flex-wrap: wrap; /* Allow tasks to wrap to the next line if there's not enough space */
+  justify-content: space-around;
+}
+.TaskContainer {
+  display: flex;
+  flex-wrap: wrap; /* Allow tasks to wrap to the next line if there's not enough space */
+  justify-content: space-around;
+}
+
+.Task {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  margin: 20px; /* Add some space around each task */
+}
+
+.TaskImage {
+  width:100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 10px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.Task:hover .TaskImage {
+  transform: scale(1.1);
+}
+
+.EventInfo {
+  max-width: 300px;
+}
+
+.EventTitle{
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size:24px;
+  font-weight: 500;
+  margin-top:15px;
+  cursor: pointer;
+}
+
+
+.EventDate{
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-style: italic;
+  font-size: 13px;
+  margin-top: 10px;
+  color:grey;
+}
+.EventDesc{
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 14px;
+  color:#a7a4a4;
+  line-height: 24px;
+  margin-top: 10px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display:-webkit-box;
+  -webkit-line-clamp: 4;
+  -webkit-box-orient: vertical;
+}
+.EnrollButton {
+  background-color:red; /* Set the button background color */
+  color: #fff; /* Set the button text color */
+  padding: 10px 15px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out; /* Add a smooth transition on hover */
+}
+
+.EnrollButton:hover {
+  background-color: #27ae60; /* Change background color on hover */
+}
+.login {
+  height: calc(100vh - 50px);
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+  background-size: cover;
+  background-position: center;
+}
+.loginTitle{
+  font-size: 50px;
+}
+.loginForm{
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+}
+.loginForm>label{
+  margin:10px 0;
+
+}
+.loginForm>input{
+  padding:10px;
+  border:none;
+  background-color: white;
+}
+.loginButton{
+  margin-top:20px;
+  cursor:pointer;
+  background-color: lightcoral;
+  border: none;
+  color:white;
+  border-radius: 10px;
+  padding:10px;
+  font-size: 20px;
+}
+.loginButton:disabled{
+  cursor: not-allowed;
+  background-color:blue;
+}
+.registerButton{
+  position:absolute;
+  top:60px;
+  right:20px;
+  background-color: teal;
+  cursor: pointer;
+  border: none;
+  padding:10px;
+  color:white;
+  border-radius: 10px;
+}
+.register {
+  height: calc(100vh - 50px);
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5));
+  background-size: cover;
+  background-position: center;
+}
+.registerTitle{
+  font-size: 50px;
+}
+.registerForm{
+  margin-top: 20px;
+  display: flex;
+  flex-direction: column;
+}
+.registerForm>label{
+  margin:10px 0;
+
+}
+.registerForm>input{
+  padding:10px;
+  border:none;
+  background-color: white;
+}
+.registersButton{
+  margin-top:20px;
+  cursor:pointer;
+  background-color: lightcoral;
+  border: none;
+  color:white;
+  border-radius: 10px;
+  padding:10px;
+  font-size: 20px;
+}
+.loginsButton{
+  position:absolute;
+  top:60px;
+  right:20px;
+  background-color: teal;
+  cursor: pointer;
+  border: none;
+  padding:10px;
+  color:white;
+  border-radius: 10px;
+
+}
+.link{
+  text-decoration: none;
+  color:inherit;
+}
+
+.singleEvent {
+  display: flex;
+  flex:9;
+}
+.Enrollment{
+  display: flex;
+}
+
+.singleEventWrap {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.singleEventWrapper {
+  padding: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.singleEventTitle {
+  text-align: center;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  margin: 10px;
+  font-size:24px;
+}
+
+.singleEventEdit{
+  float:right;
+  font-size:20px;
+}
+.singleEventIcon{
+    margin-right:20px;
+    margin-left:20px;
+    cursor: pointer;
+}
+.singleEventIcon:first-child{
+  color:teal;
+}
+.singleEventIcon:last-child{
+  color:red;
+}
+/* .singleEventInfo {
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  font-size: 16px;
+  color: darkcyan;
+}
+.singleEventHead{
+  font-size: 24px;
+  padding:5px;
+  color:chartreuse;
+} */
+.singleEventDetails {
+  display: flex;
+  flex-direction: column;
+  margin-right: 20px; /* Adjust the margin based on your preference */
+}
+
+.singleEventHead {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.singleEventHead h4 {
+  margin-right: 10px; /* Adjust the margin based on your preference */
+  color: #4285f4; /* Set the color for labels */
+}
+
+.singleEventHead b {
+  color: #0f9d58; /* Set the color for values */
+}
+
+.singleEventDate {
+  text-align: left;
+}
+
+.singleEventDateText {
+  font-weight: bold;
+  color: #db4437; /* Set the color for date */
+}
+
+
+.singleEventImg {
+  width: 500px;
+  height: 400px;
+  object-fit: cover;
+  border-radius: 5px;
+}
+
+.singleEventDesc {
+  color:#666;
+  font-size: 14px;
+  width:50%;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  line-height: 20px;
+}
+.singleEventDate{
+  margin-left: 10px;
+}
+.write{
+  padding-top:50px;
+}
+.writeImg{
+  margin-left:150px;
+  width:70vw;
+  height: 250px;
+  border-radius: 10px;
+  object-fit: cover;
+}
+.writeForm{
+  position: relative;
+}
+.writeFormGroup{
+    margin-left: 150px;
+    display:flex;
+    align-items: center;
+}
+.writeIcon{
+  width:25px;
+  height:25px;
+  margin-right:10px;
+  border-radius: 50%;
+  border:1px solid;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  color:gray;
+}
+.writeInput{
+  font-size:30px;
+  border:none;
+  padding:20px;
+  width:30vw;
+}
+.writeInput:focus{
+  outline: none;
+}
+.writeText{
+  font-size: 20px;
+  height: 100vh;
+}
+.writeSubmit{
+   position: absolute;
+   top:20px;
+   right:50px; 
+   color:white;
+   background-color: teal;
+   padding:10px;
+   border: none;
+   border-radius: 5px;
+   cursor: pointer;
+}
+.EnrollForm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 80vh;
+  margin: 20px;
+}
+
+.EnrollmentForm {
+  max-width: 450px;
+  width: 100%;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  background-color:whitesmoke;
+}
+
+.EnrollmentForm h1 {
+  text-align: center;
+  color:red;
+}
+
+label {
+  display: block;
+  margin: 10px 0 5px;
+  color: #555;
+}
+
+input {
+  width: 100%;
+  padding: 10px;
+  margin: 5px 0 15px;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+}
+
+button.EnrollSubmit {
+  background-color: red;
+  color: white;
+  padding: 10px 15px;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+button.EnrollSubmit:hover {
+  background-color: #45a049;
+}
+/* Add this CSS to your existing styles or create a new stylesheet */
+
+.dept {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px; /* Adjust the margin-top as needed for spacing */
+}
+
+.Events {
+  margin-top: 20px; /* Adjust the margin-top as needed for spacing */
+}
+
+/* Style the select dropdown */
+.dept select {
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  margin-right: 10px; /* Adjust the margin-right as needed for spacing */
+}
+
+/* Optional: Add some styles to make the dropdown visually appealing */
+.dept select:hover {
+  border-color: #333;
+}
+
+.dept select:focus {
+  outline: none;
+  border-color: #555;
+  box-shadow: 0 0 5px rgba(85, 85, 85, 0.5);
+}
+.singlePostEdit{
+  float:right;
+  font-size:16px;
+}
+.singlePostIcon{
+    margin-right:20px;
+    cursor: pointer;
+}
+.singlePostIcon:first-child{
+  color:teal;
+}
+.singlePostIcon:last-child{
+  color:red;
+}
+.singlePostButton{
+  width:100px;
+  border:none;
+  background-color: teal;
+  color:white;
+  margin-top:20px;
+  padding:5px;
+  border-radius: 5px;
+  cursor: pointer;
+  align-self: center;
+  font-size: 24px;
+}
+.singleEventDesc{
+  color:#666;
+  font-size: 14px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  line-height: 20px;
+}
+.singleEventDescInput{
+  color:#666;
+  border:none;
+  font-size: 14px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  line-height: 20px;
+}
+.singleEventDescInput:focus{
+  outline: none;
+}
+.singleEventDesc::first-letter{
+   margin-left: 20px;
+   font-size: 30px;
+   font-weight: 600;
+}
+.participants-container {
+  width: 100%;
+  padding: 20px;
+}
+
+.participants-table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.participants-table th, .participants-table td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: left;
+}
+
+.participants-table th {
+  background-color: #f2f2f2;
+}
+
+.participants-table tbody tr:hover {
+  background-color: #f5f5f5;
+}
+
+.participants-table tbody tr.even {
+  background-color: #fff;
+}
+
+.participants-table tbody tr.odd {
+  background-color: #f9f9f9;
+}
